<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            style="@style/Widget.MaterialComponents.ActionBar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white"
            app:navigationIcon="@drawable/baseline_arrow_back_24"
            app:navigationIconTint="@color/black"
            app:title="@string/settings">

        </com.google.android.material.appbar.MaterialToolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/tv_provided_by"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/provided_by"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/iv_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appbar" />



    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appbar"
        tools:ignore="ContentDescription"
        app:srcCompat="@drawable/logo" />

    <View
        android:id="@+id/view_bg"
        android:layout_width="0dp"
        android:layout_height="16dp"
        android:background="@color/status_bar_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_logo" />

    <TextView
        android:id="@+id/tv_temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/temperature"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/group_temp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/group_temp" />

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/group_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_bg"
        app:selectionRequired="true"
        app:singleSelection="true">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_c"
            android:tag="C"
            android:layout_width="88dp"
            android:layout_height="48dp"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/c"
            style="?attr/materialButtonOutlinedStyle"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_f"
            android:layout_width="88dp"
            android:layout_height="48dp"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/f_"
            style="?attr/materialButtonOutlinedStyle"/>

    </com.google.android.material.button.MaterialButtonToggleGroup>

    <TextView
        android:id="@+id/tv_wind_speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/wind_speed"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/group_wind_speed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/group_wind_speed" />

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/group_wind_speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/group_temp"
        app:selectionRequired="true"
        app:singleSelection="true">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/degree_m_c"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="88dp"
            android:layout_height="48dp"
            android:tag="MC"
            android:text="@string/m_c"
            android:textSize="16sp"
            android:textStyle="bold" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/degree_km_h"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="88dp"
            android:layout_height="48dp"
            android:text="@string/km_h"
            android:textSize="16sp"
            android:textStyle="bold" />

    </com.google.android.material.button.MaterialButtonToggleGroup>

    <TextView
        android:id="@+id/tv_pressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/pressure"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/group_pressure"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/group_pressure" />

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/group_pressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/group_wind_speed"
        app:selectionRequired="true"
        app:singleSelection="true">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/degree_mmhg"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="88dp"
            android:layout_height="48dp"
            android:tag="MMHG"
            android:text="@string/mmHg"
            android:textSize="14sp"
            android:textStyle="bold" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/degree_hpa"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="88dp"
            android:layout_height="48dp"
            android:text="@string/hpa"
            android:textSize="14sp"
            android:textStyle="bold" />

    </com.google.android.material.button.MaterialButtonToggleGroup>


    <View
        android:id="@+id/view_bg_bottom"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:background="@color/status_bar_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/group_pressure" />

</androidx.constraintlayout.widget.ConstraintLayout>